--- a/pb_logique_seq/pb_logique_seq.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
+++ b/pb_logique_seq/pb_logique_seq.srcs/sources_1/bd/design_1/ui/bd_1f5defd0.ui
@@ -1,14 +1,8 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_Layers":"/clk_1:false|/M1_decodeur_i2s/mef_decod_i2s_v1b_0_o_cpt_bit_reset:false|/i_reset_1:false|/M9_codeur_i2s/mef_cod_i2s_vsb_0_o_cpt_bit_reset:false|",
    "Default View_ScaleFactor":"0.565802",
-   "Default View_TopLeft":"-124,-23",
-   "Display-PortTypeClock":"false",
-   "Display-PortTypeReset":"false",
-   "DisplayMarkDebug":"0",
-   "DisplayPinsOfHiddenNets":"1",
+   "Default View_TopLeft":"-122,-21",
    "ExpandedHierarchyInLayout":"",
-   "HideNet":"/clk_1|/M1_decodeur_i2s/mef_decod_i2s_v1b_0_o_cpt_bit_reset|/i_reset_1|/M9_codeur_i2s/mef_cod_i2s_vsb_0_o_cpt_bit_reset|",
    "comment_1":"Modules à modifier:
 MEF_decodeur_i2s (dans M1_decodeur_i2s)
 M5_parametre_1
@@ -21,59 +15,61 @@ et les resets dans les paramètres (engrenage en haut a droite de cette fenêtre).
    "font_comment_1":"14",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
 #  -string -flagsOSRD
-preplace port i_recdat -pg 1 -lvl 0 -x 0 -y 270 -defaultsOSRD
-preplace port i_lrc -pg 1 -lvl 0 -x 0 -y 290 -defaultsOSRD
-preplace port clk_100MHz -pg 1 -lvl 0 -x 0 -y 190 -defaultsOSRD
-preplace portBus i_btn -pg 1 -lvl 0 -x 0 -y 600 -defaultsOSRD
-preplace portBus i_sw -pg 1 -lvl 0 -x 0 -y 620 -defaultsOSRD
-preplace portBus o_pbdat -pg 1 -lvl 7 -x 1890 -y 770 -defaultsOSRD
-preplace portBus JPmod -pg 1 -lvl 7 -x 1890 -y 560 -defaultsOSRD
-preplace portBus o_param -pg 1 -lvl 7 -x 1890 -y 380 -defaultsOSRD
-preplace portBus o_sel_par -pg 1 -lvl 7 -x 1890 -y 670 -defaultsOSRD
-preplace portBus o_sel_fct -pg 1 -lvl 7 -x 1890 -y 650 -defaultsOSRD
-preplace inst M1_decodeur_i2s -pg 1 -lvl 1 -x 150 -y 280 -defaultsOSRD
-preplace inst M9_codeur_i2s -pg 1 -lvl 6 -x 1740 -y 770 -defaultsOSRD
-preplace inst M10_conversion_affichage -pg 1 -lvl 6 -x 1740 -y 560 -defaultsOSRD
-preplace inst M5_parametre_1 -pg 1 -lvl 4 -x 1070 -y 80 -defaultsOSRD
-preplace inst M6_parametre_2 -pg 1 -lvl 4 -x 1070 -y 240 -defaultsOSRD
-preplace inst M7_parametre_3 -pg 1 -lvl 4 -x 1070 -y 400 -defaultsOSRD
-preplace inst M8_commande -pg 1 -lvl 5 -x 1400 -y 600 -defaultsOSRD
-preplace inst Multiplexeur_choix_fonction -pg 1 -lvl 3 -x 760 -y 90 -defaultsOSRD
-preplace inst Multiplexeur_choix_parametre -pg 1 -lvl 5 -x 1400 -y 380 -defaultsOSRD
-preplace inst M4_fonction3 -pg 1 -lvl 2 -x 430 -y 520 -defaultsOSRD
-preplace inst M2_fonction_distortion_dure1 -pg 1 -lvl 2 -x 430 -y 320 -defaultsOSRD
-preplace inst M3_fonction_distorsion_dure2 -pg 1 -lvl 2 -x 430 -y 420 -defaultsOSRD
-preplace inst parametre_0 -pg 1 -lvl 4 -x 1070 -y 530 -defaultsOSRD
-preplace netloc sig_fct_sat_dure_0_o_ech_fct 1 2 1 570 70n
-preplace netloc sig_fct_sat_dure_1_o_ech_fct 1 2 1 590 90n
-preplace netloc sig_fct_3_0_o_ech_fct 1 2 1 600 110n
-preplace netloc module_commande_0_o_selection_fct 1 2 5 610 700 NJ 700 NJ 700 1560 650 NJ
-preplace netloc calcul_param_1_0_o_param 1 4 1 1220 80n
-preplace netloc calcul_param_2_0_o_param 1 4 1 1200 240n
-preplace netloc calcul_param_3_0_o_param 1 4 1 N 400
-preplace netloc xlconstant_0_dout 1 4 1 1210J 340n
-preplace netloc decodeur_i2s_o_str_dat 1 1 3 NJ 260 NJ 260 900
-preplace netloc i_data_1 1 0 1 NJ 270
-preplace netloc i_lrc_1 1 0 6 20 730 NJ 730 NJ 730 NJ 730 NJ 730 NJ
-preplace netloc mux4_1_output 1 5 2 1580 380 NJ
-preplace netloc i_btn_1 1 0 5 NJ 600 NJ 600 NJ 600 NJ 600 NJ
-preplace netloc i_sw_1 1 0 5 NJ 620 NJ 620 NJ 620 NJ 620 NJ
-preplace netloc i_dat_left_1 1 1 5 270J 690 NJ 690 NJ 690 NJ 690 1550
-preplace netloc i_dat_right_1 1 3 3 890 770 NJ 770 NJ
-preplace netloc decodeur_i2s_o_dat_right 1 1 2 260 580 580
-preplace netloc M8_commande_o_selection_par 1 4 3 1220 510 1570 670 NJ
-preplace netloc M9_codeur_i2s_o_dat 1 6 1 NJ 770
-preplace netloc M10_conversion_affichage_JPmod 1 6 1 NJ 560
-preplace netloc M8_commande_o_btn_cd 1 5 1 N 590
-preplace cgraphic comment_1 place top 0 10 textcolor 4 linecolor 3
-levelinfo -pg 1 0 150 430 760 1070 1400 1740 1890
-pagesize -pg 1 -db -bbox -sgen -130 -10 2030 860
+preplace port i_recdat -pg 1 -lvl 0 -x -80 -y 340 -defaultsOSRD
+preplace port i_lrc -pg 1 -lvl 0 -x -80 -y 360 -defaultsOSRD
+preplace port clk_100MHz -pg 1 -lvl 0 -x -80 -y 380 -defaultsOSRD
+preplace portBus i_btn -pg 1 -lvl 0 -x -80 -y 730 -defaultsOSRD
+preplace portBus i_sw -pg 1 -lvl 0 -x -80 -y 750 -defaultsOSRD
+preplace portBus o_pbdat -pg 1 -lvl 7 -x 2070 -y 570 -defaultsOSRD
+preplace portBus JPmod -pg 1 -lvl 7 -x 2070 -y 270 -defaultsOSRD
+preplace portBus o_param -pg 1 -lvl 7 -x 2070 -y 120 -defaultsOSRD
+preplace portBus o_sel_par -pg 1 -lvl 7 -x 2070 -y 720 -defaultsOSRD
+preplace portBus o_sel_fct -pg 1 -lvl 7 -x 2070 -y 700 -defaultsOSRD
+preplace inst M1_decodeur_i2s -pg 1 -lvl 1 -x 120 -y 350 -defaultsOSRD
+preplace inst M9_codeur_i2s -pg 1 -lvl 1 -x 120 -y 570 -defaultsOSRD
+preplace inst M10_conversion_affichage -pg 1 -lvl 6 -x 1650 -y 270 -defaultsOSRD
+preplace inst M6_parametre_2 -pg 1 -lvl 4 -x 1060 -y 320 -defaultsOSRD
+preplace inst M7_parametre_3 -pg 1 -lvl 4 -x 1060 -y 480 -defaultsOSRD
+preplace inst Multiplexeur_choix_fonction -pg 1 -lvl 3 -x 740 -y 270 -defaultsOSRD
+preplace inst Multiplexeur_choix_parametre -pg 1 -lvl 5 -x 1360 -y 280 -defaultsOSRD
+preplace inst M4_fonction3 -pg 1 -lvl 2 -x 430 -y 380 -defaultsOSRD
+preplace inst M2_fonction_distortion_dure1 -pg 1 -lvl 2 -x 430 -y 180 -defaultsOSRD
+preplace inst M3_fonction_distorsion_dure2 -pg 1 -lvl 2 -x 430 -y 280 -defaultsOSRD
+preplace inst parametre_0 -pg 1 -lvl 4 -x 1060 -y 30 -defaultsOSRD
+preplace inst M5_parametre_1 -pg 1 -lvl 4 -x 1060 -y 160 -defaultsOSRD
+preplace inst M8_commande -pg 1 -lvl 2 -x 430 -y 730 -defaultsOSRD
+preplace netloc sig_fct_sat_dure_0_o_ech_fct 1 2 1 580 180n
+preplace netloc sig_fct_sat_dure_1_o_ech_fct 1 2 1 590 270n
+preplace netloc sig_fct_3_0_o_ech_fct 1 2 1 580 290n
+preplace netloc module_commande_0_o_selection_fct 1 2 5 590 700 N 700 N 700 N 700 N
+preplace netloc calcul_param_1_0_o_param 1 4 1 1190 160n
+preplace netloc calcul_param_2_0_o_param 1 4 1 1190 280n
+preplace netloc calcul_param_3_0_o_param 1 4 1 1200 300n
+preplace netloc xlconstant_0_dout 1 4 1 1210 30n
+preplace netloc decodeur_i2s_o_str_dat 1 1 3 250J 110 NJ 110 890
+preplace netloc clk_1 1 0 6 -50 450 250J 450 NJ 450 880 590 1220 560 1490
+preplace netloc i_data_1 1 0 1 NJ 340
+preplace netloc i_lrc_1 1 0 1 -60 360n
+preplace netloc mux4_1_output 1 5 2 1500 120 N
+preplace netloc i_btn_1 1 0 2 NJ 730 NJ
+preplace netloc i_sw_1 1 0 2 NJ 750 NJ
+preplace netloc i_dat_left_1 1 0 2 -30 260 240J
+preplace netloc i_dat_right_1 1 0 4 -20 460 N 460 N 460 910
+preplace netloc decodeur_i2s_o_dat_right 1 1 2 260 120 590
+preplace netloc M8_commande_o_selection_par 1 2 5 N 760 N 760 1210 720 N 720 N
+preplace netloc M9_codeur_i2s_o_dat 1 1 6 N 570 N 570 870 580 N 580 1520 570 N
+preplace netloc M10_conversion_affichage_JPmod 1 6 1 N 270
+preplace netloc i_reset_1 1 0 6 -40 470 NJ 470 580J 470 900 570 N 570 1510
+preplace netloc M8_commande_o_btn_cd 1 2 4 N 720 N 720 1190 550 1500
+preplace cgraphic comment_1 place top 0 30 textcolor 4 linecolor 3
+levelinfo -pg 1 -80 120 430 740 1060 1360 1650 2070
+pagesize -pg 1 -db -bbox -sgen -210 -30 2210 860
 ",
    "linktoobj_comment_1":"",
    "linktotype_comment_1":"bd_design"
 }
 {
-   """"""""""""""""""""""""""da_clkrst_cnt"""""""""""""""""""""""""":"1"
+   """""""""""""""""""""""""""da_clkrst_cnt""""""""""""""""""""""""""":"1"
 }
 {
    "/comment_1":"comment_1",
